4-traefik/ingress/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: "almanza-ingress"
  #namespace: production
spec:
  rules:
    - host: hireme.almatronics.es
      http:
        paths:
          - path: /
            backend:
              serviceName: almanza-service-cn1
              servicePort: 80
          - path: /container1
            backend:
              serviceName: almanza-service-cn1
              servicePort: 80
          - path: /container2
            backend:
              serviceName: almanza-service-cn2
              servicePort: 80
